<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.investmenttracker.screens.investment.InvestmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey"
        android:padding="16dp"
        tools:context=".screens.investment.ViewInvestmentsFragment">

    <!-- Title Area -->
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/overview_investments"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- RecyclerView for listing investments -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_investments"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintBottom_toTopOf="@+id/buttonBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- Button Bar Container -->
    <LinearLayout
        android:id="@+id/buttonBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView_investments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp">

        <!-- Create Investment Button -->
        <Button
            android:id="@+id/btn_create_investment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_btn"
            android:layout_marginEnd="8dp" />

        <!-- Delete Investment Button -->
        <Button
            android:id="@+id/btn_delete_investment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_btn"
            android:layout_marginEnd="8dp"/>

        <!-- Research Investment Button -->
        <Button
            android:id="@+id/btn_research_investment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_btn" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>