<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!-- Define any data binding variables here -->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey"
        android:padding="16dp"
        tools:context=".screens.crypto.SearchCryptoFragment">

        <!-- Title for the Crypto tokens -->
        <TextView
            android:id="@+id/textView_cryptoTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/crypto_title"
            android:textSize="24sp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"/>

        <!-- Search Input -->
        <EditText
            android:id="@+id/editText_searchQuery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/textView_cryptoTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_search"
            app:layout_constraintWidth_percent="0.7"/>

        <!-- Search Button -->
        <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_btn"
            app:layout_constraintTop_toTopOf="@id/editText_searchQuery"
            app:layout_constraintBottom_toBottomOf="@id/editText_searchQuery"
            app:layout_constraintStart_toEndOf="@id/editText_searchQuery"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Results Display -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_searchResults"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/button_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
