<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.investmenttracker.screens.info.InfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/light_grey"
        tools:context=".screens.info.InfoFragment">

        <!-- Title Area -->
        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:text="@string/info_title"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageUserPhoto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="116dp"
            android:src="@drawable/default_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- VIVES ID Label -->

        <!-- VIVES ID Value -->
        <TextView
            android:id="@+id/labelVivesId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:gravity="center"
            android:text="@string/vives_id"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageUserPhoto" />

        <!-- Email Label -->

        <!-- Email Address Value -->

        <TextView
            android:id="@+id/txtVivesId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@{viewModel.vivesId}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelVivesId" />

        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/email_address"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtVivesId" />

        <TextView
            android:id="@+id/txtEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@{viewModel.emailAddress}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
